--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  	<h1>Write your names and information here please</h1>
  	<ul>
  		<li>
- 			<b>Ram Dayal Vaishnav</b>
+ 			<b>Akhil</b>
  			<i>http://facebook.com/ram.gurumukhi</i>
 			
 			<b>Manoj Kumar</b>
